tests/test_date/bad/uncomparable_duration.catala_en
## `UncomparableDurations` exception management

### `<^` operator

```catala
declaration scope Lt:
  context d content boolean

scope Lt:
  definition d equals 1 month <^ 2 day
```

### `<=^` operator

```catala
declaration scope Le:
  context d content boolean

scope Le:
  definition d equals 1 month <=^ 2 day
```

### `<=^` operator

```catala
declaration scope Gt:
  context d content boolean

scope Gt:
  definition d equals 1 month >^ 2 day
```

### `>=^` operator

```catala
declaration scope Ge:
  context d content boolean

scope Ge:
  definition d equals 1 month >=^ 2 day
```

```catala-test-inline
$ catala Interpret -s Ge
[ERROR] Cannot compare together durations that cannot be converted to a precise number of days

  --> tests/test_date/bad/uncomparable_duration.catala_en
   | 
40 |   definition d equals 1 month >=^ 2 day
   |                       ^^^^^^^
   + `UncomparableDurations` exception management
   +-+ `>=^` operator

  --> tests/test_date/bad/uncomparable_duration.catala_en
   | 
40 |   definition d equals 1 month >=^ 2 day
   |                                   ^^^^^
   + `UncomparableDurations` exception management
   +-+ `>=^` operator
```

```catala-test-inline
$ catala Interpret -s Gt
[ERROR] Cannot compare together durations that cannot be converted to a precise number of days

  --> tests/test_date/bad/uncomparable_duration.catala_en
   | 
30 |   definition d equals 1 month >^ 2 day
   |                       ^^^^^^^
   + `UncomparableDurations` exception management
   +-+ `<=^` operator

  --> tests/test_date/bad/uncomparable_duration.catala_en
   | 
30 |   definition d equals 1 month >^ 2 day
   |                                  ^^^^^
   + `UncomparableDurations` exception management
   +-+ `<=^` operator
```

```catala-test-inline
$ catala Interpret -s Le
[ERROR] Cannot compare together durations that cannot be converted to a precise number of days

  --> tests/test_date/bad/uncomparable_duration.catala_en
   | 
20 |   definition d equals 1 month <=^ 2 day
   |                       ^^^^^^^
   + `UncomparableDurations` exception management
   +-+ `<=^` operator

  --> tests/test_date/bad/uncomparable_duration.catala_en
   | 
20 |   definition d equals 1 month <=^ 2 day
   |                                   ^^^^^
   + `UncomparableDurations` exception management
   +-+ `<=^` operator
```

```catala-test-inline
$ catala Interpret -s Lt
[ERROR] Cannot compare together durations that cannot be converted to a precise number of days

  --> tests/test_date/bad/uncomparable_duration.catala_en
   | 
10 |   definition d equals 1 month <^ 2 day
   |                       ^^^^^^^
   + `UncomparableDurations` exception management
   +-+ `<^` operator

  --> tests/test_date/bad/uncomparable_duration.catala_en
   | 
10 |   definition d equals 1 month <^ 2 day
   |                                  ^^^^^
   + `UncomparableDurations` exception management
   +-+ `<^` operator
```
